--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Amphibians</string>
+    <string name="loading_failed">Loading Failure</string>
+    <string name="retry">Retry</string>
 </resources>
